--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <td>44</td>
             <td> progress </td>
             <td> <label for="file">My Typing Progress</label>  <br>
-                <progress id="file" value="32" max="100"> 32% </progress>  </td>
+                <progress id="file" value="85" max="100"> 32% </progress>  </td>
         </tr>
 
         <tr>
@@ -426,10 +426,10 @@
         </tr>
 
     </table>
+    <br><br><br><br><br><br><br><br>
+<h3 style="text-align:center; color: rgb(0, 255, 4);">MD.MAHATAB</h3>
 
-
-
-
+<br><br><br><br><br><br><br><br>
 
 
 
