--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
 
     </table>
     <br><br><br><br><br><br><br><br>
-<h3 style="text-align:center; color: rgb(0, 255, 4);">MD.MAHATAB</h3>
+    <h3 style="text-align:start; color: rgb(0, 255, 4);">Submitted to:Minhaz Faisal</h3>
+<h4 style="text-align:end; color: rgb(0, 255, 4);">Submitted by:MD.Mahatab</h4>
 
 <br><br><br><br><br><br><br><br>
 
